--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,31 @@
   padding: 0;
   box-sizing: border-box;
 }
+textarea,
+select,
+input {
+  display: block;
+  width: 100%;
+  border: 1px solid white;
+  border-bottom: solid 1px grey;
+  padding: 10px 15px;
+  margin: 15px 0px;
+  font-size: 14px;
+}
+input[type="submit"],
+.button {
+  position: relative;
+  background: #ec5990;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  font-weight: 600;
+  margin-top: 20px;
+  padding: 10px;
+  font-size: 16px;
+  display: block;
+  appearance: none;
+  width: 100%;
+  font-weight: 400;
+  transition: 0.3s all;
+}
