--- a/src/Component/FormBanner/FormBanner.css
+++ b/src/Component/FormBanner/FormBanner.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 800px;
   padding: 30px 0px;
 }
 .banner-content {
@@ -43,18 +42,9 @@
 /* Form */
 .banner-title-form {
   background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  padding-left: 14px;
-  padding-right: 14px;
+  max-height: 400px;
+  padding: 14px 15px;
   border-radius: 10px;
   border-bottom: 1px solid grey;
   box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
-  transition: all 0.3s ease-in-out;
-}
-.banner-title-form.active {
-  max-height: 400px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  transition: all 0.3s ease-in-out;
 }
