--- a/src/Component/FormReceive/ReceiveForm.css
+++ b/src/Component/FormReceive/ReceiveForm.css
@@ -2,14 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 800px;
+  max-width: 1200px;
   padding: 30px 0px;
 }
 .receive-content {
-  width: 90%;
-}
-.receive-title {
-  margin-bottom: 5px;
+  width: 100%;
 }
 .receive-title-header {
   display: flex;
@@ -20,14 +17,14 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  border-bottom: solid 2px gray;
   outline: none;
   width: 100%;
-  height: 65px;
+  height: 50px;
   padding: 0 25px;
   background-color: white;
   box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
   border-radius: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.122);
 }
 .receive-icons {
   display: flex;
@@ -39,15 +36,6 @@
 .receive-icon {
   cursor: pointer;
 }
-.receive-icon .add :hover {
-  color: rgb(67, 179, 67);
-}
-.receive-icons .up :hover {
-  color: rgb(55, 61, 230);
-}
-.receive-icons .det :hover {
-  color: rgb(218, 31, 62);
-}
 /* Form */
 .receive-title-form {
   background-color: white;
@@ -55,7 +43,6 @@
   overflow: hidden;
   padding-left: 14px;
   padding-right: 14px;
-  border-radius: 10px;
   border-bottom: 1px solid grey;
   transition: all 0.3s ease-in-out;
 }
@@ -64,34 +51,6 @@
   padding-top: 15px;
   padding-bottom: 15px;
   transition: all 0.3s ease-in-out;
-}
-textarea,
-select,
-input {
-  display: block;
-  width: 100%;
-  border: 1px solid white;
-  border-bottom: solid 1px grey;
-  padding: 10px 15px;
-  margin: 15px 0px;
-  font-size: 14px;
-}
-input[type="submit"],
-.button {
-  position: relative;
-  background: #ec5990;
-  color: white;
-  text-transform: uppercase;
-  border: none;
-  font-weight: 600;
-  margin-top: 20px;
-  padding: 10px;
-  font-size: 16px;
-  display: block;
-  appearance: none;
-  width: 100%;
-  font-weight: 400;
-  transition: 0.3s all;
 }
 .receive-item-title {
   display: flex;
@@ -112,29 +71,14 @@ input[type="submit"],
   border-radius: 5px;
   margin-bottom: 5px;
 }
-
-/* Items drop down*/
-.items-wrap {
-  background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  padding-left: 14px;
-  padding-right: 10px;
-  transition: all 0.3s ease-in-out;
+.receive-title {
+  margin-bottom: 1px;
 }
-.items-wrap.active {
-  max-height: 2000px;
-  transition: all 0.3s ease-in-out;
-}
-.receive-item {
-  margin-bottom: 5px;
-}
-.rc-item-header {
+.receive-item-content {
   display: flex;
   font-weight: 600;
   font-size: 16px;
   color: #111111;
-  font-family: inherit;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -145,23 +89,56 @@ input[type="submit"],
   padding: 0 25px;
   background-color: white;
   box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
-  cursor: pointer;
   border-bottom: solid 1px grey;
 }
-.answer-show {
+
+/* Items drop down*/
+.items-wrap {
   background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  padding-left: 14px;
-  padding-right: 14px;
-  border-radius: 5px;
-  border-bottom: 1px solid grey;
-  box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
+  max-height: 1000px;
+  padding-left: 50px;
   transition: all 0.3s ease-in-out;
 }
-.answer-show.active {
-  max-height: 400px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  transition: all 0.3s ease-in-out;
+.rc-item-header {
+  display: flex;
+  font-weight: 400;
+  font-size: 16px;
+  color: #111111;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+  outline: none;
+  width: 100%;
+  min-height: 50px;
+  padding: 10px 25px;
+  background-color: white;
+  border-bottom: solid 1px grey;
+  box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
+}
+.rc-content-col {
+  width: 250px;
+}
+.rc-content-action {
+  display: flex;
+  background-color: #2c79d2;
+  color: white;
+  justify-content: center;
+  width: 80px;
+  padding: 5px 0;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+.rc-content-action:hover {
+  color: white;
+  background-color: rgb(80, 70, 189);
+  border: black 1px solid;
+}
+
+.rc-item-col {
+  display: block;
+  width: 250px;
+  height: 100%;
+  overflow-wrap: break-word;
 }
