--- a/src/Screen/Admin/Admin.css
+++ b/src/Screen/Admin/Admin.css
@@ -6,12 +6,12 @@
   flex-wrap: wrap;
 }
 .form-container {
-  margin-left: 20%;
-  width: 80%;
+  margin-left: 240px;
+  width: 100%;
   padding: 50px 50px;
 }
 .side-bar {
-  width: 20%;
+  max-width: 240px;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -43,17 +43,24 @@
 .sidebar-logo {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
   min-width: 100px;
-  margin-top: 25px;
+  height: 50px;
 }
+.sidebar-logo:hover {
+  background: rgb(83, 82, 82);
+}
+
 .sidebar-icon {
-  width: 30%;
   color: #fff;
-  font-size: 25px;
+  font-size: 20px;
+  height: 20px;
   float: left;
 }
 .sidebar-item {
   width: 50%;
+  margin-left: 10px;
 }
 .sidebar-item h3 {
   color: #fff;
@@ -68,8 +75,14 @@
   color: #fff;
   display: flex;
   flex-wrap: wrap;
-  padding-top: 20px;
-  padding-left: 50px;
+  padding: 10px 0px;
+  margin-left: 50px;
+}
+.sidebar-row.active {
+  background: rgb(83, 82, 82);
+}
+.sidebar-row:hover {
+  background: rgb(68, 63, 63);
 }
 .sidebar-row h4 {
   width: 60%;
@@ -85,10 +98,10 @@
   list-style-type: none;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-out;
 }
 .sidebar-title.active {
   list-style-type: none;
   max-height: 300px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-out;
 }
