--- a/src/Component/FormCampus/FormCampus.css
+++ b/src/Component/FormCampus/FormCampus.css
@@ -1,165 +1,167 @@
 .campus-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 1200px;
-    padding: 30px 0px;
-  }
-  .campus-content {
-    width: 100%;
-  }
-  .campus-title-header {
-    display: flex;
-    font-weight: 600;
-    font-size: 18px;
-    color: #111111;
-    font-family: inherit;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    outline: none;
-    width: 100%;
-    height: 50px;
-    padding: 0 25px;
-    background-color: white;
-    box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
-    border-radius: 5px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.122);
-  }
-  .campus-title-header p {
-    font-style: normal;
-    font-weight: 600;
-  }
-  .campus-icons {
-    display: flex;
-    width: 80px;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-  }
-  .campus-icon {
-    cursor: pointer;
-    /* padding-left: 10px; */
-  }
-  .campus-icons-down {
-    /* min-height: 130px; */
-    margin-top: 30px;
-    font-size: 20px;
-    height: 100%;
-  }
-  .ab-icon-down {
-    font-size: 25px;
-    cursor: pointer;
-  }
-  /* Form */
-  .campus-title-form {
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    padding-left: 14px;
-    padding-right: 14px;
-    border-bottom: 1px solid grey;
-    transition: all 0.3s ease-in-out;
-  }
-  .campus-title-form.active {
-    max-height: 300px;
-    padding: 20px 50px;
-    box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
-    transition: all 0.3s ease-in-out;
-  }
-  .campus-item-title {
-    display: flex;
-    font-weight: 600;
-    font-size: 18px;
-    color: #111111;
-    font-family: inherit;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: solid 2px gray;
-    outline: none;
-    width: 100%;
-    height: 65px;
-    padding: 0 25px;
-    background-color: white;
-    box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
-    border-radius: 5px;
-    margin-bottom: 5px;
-  }
-  .campus-title {
-    margin-bottom: 1px;
-    padding-left: 50px;
-  }
-  .campus-title-item {
-    line-height: 1.5;
-  }
-  .campus-item-content {
-    display: flex;
-    font-weight: 600;
-    font-size: 16px;
-    color: #111111;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 50px;
-    padding: 0 25px;
-    background-color: white;
-    box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
-    border-bottom: solid 1px grey;
-  }
-  
-  /* Items drop down*/
-  .campus-items-wrap {
-    background-color: white;
-    max-height: 1000px;
-    padding-right: 10px;
-    padding-left: 50px;
-    transition: all 0.3s ease-in-out;
-  }
-  .campus-item-header {
-    display: flex;
-    font-weight: 400;
-    font-size: 16px;
-    color: #111111;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: none;
-    outline: none;
-    width: 100%;
-    min-height: 50px;
-    padding: 10px 25px;
-    background-color: white;
-    border-bottom: solid 1px grey;
-    box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
-  }
-  .campus-content-col {
-    width: 250px;
-  }
-  .campus-content-action {
-    display: flex;
-    background-color: #2c79d2;
-    color: white;
-    justify-content: center;
-    width: 80px;
-    padding: 5px 0;
-    cursor: pointer;
-    border-radius: 5px;
-    border: 1px solid black;
-  }
-  .campus-content-action:hover {
-    color: white;
-    background-color: rgb(80, 70, 189);
-    border: black 1px solid;
-  }
-  
-  .campus-item-col {
-    display: block;
-    width: 50%;
-    height: 100%;
-    overflow-wrap: break-word;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 1200px;
+  padding: 30px 0px;
+}
+.campus-content {
+  width: 100%;
+}
+.campus-title-header {
+  display: flex;
+  font-weight: 600;
+  font-size: 18px;
+  color: #111111;
+  font-family: inherit;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  outline: none;
+  width: 100%;
+  height: 50px;
+  padding: 0 25px;
+  background-color: white;
+  box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.122);
+}
+.campus-title-header p {
+  font-style: normal;
+  font-weight: 400;
+  margin-left: 10px;
+}
+.campus-title-item {
+  line-height: 1.5;
+  display: flex;
+}
+.campus-icons {
+  display: flex;
+  width: 80px;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 20px;
+}
+.campus-icon {
+  cursor: pointer;
+  /* padding-left: 10px; */
+}
+.campus-icons-down {
+  /* min-height: 130px; */
+  margin-top: 30px;
+  font-size: 20px;
+  height: 100%;
+}
+.campus-icon-down {
+  font-size: 25px;
+  cursor: pointer;
+}
+/* Form */
+.campus-title-form {
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  padding-left: 14px;
+  padding-right: 14px;
+  border-bottom: 1px solid grey;
+  transition: all 0.3s ease-in-out;
+}
+.campus-title-form.active {
+  max-height: 300px;
+  padding: 20px 50px;
+  box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
+  transition: all 0.3s ease-in-out;
+}
+.campus-item-title {
+  display: flex;
+  font-weight: 600;
+  font-size: 18px;
+  color: #111111;
+  font-family: inherit;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: solid 2px gray;
+  outline: none;
+  width: 100%;
+  height: 65px;
+  padding: 0 25px;
+  background-color: white;
+  box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+.campus-title {
+  margin-bottom: 1px;
+}
+.campus-title-item {
+  line-height: 1.5;
+}
+.campus-item-content {
+  display: flex;
+  font-weight: 600;
+  font-size: 16px;
+  color: #111111;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 50px;
+  padding: 0 25px;
+  background-color: white;
+  box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
+  border-bottom: solid 1px grey;
+}
+
+/* Items drop down*/
+.campus-items-wrap {
+  background-color: white;
+  max-height: 1000px;
+  padding-right: 10px;
+  padding-left: 50px;
+  transition: all 0.3s ease-in-out;
+}
+.campus-item-header {
+  display: flex;
+  font-weight: 400;
+  font-size: 16px;
+  color: #111111;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+  outline: none;
+  width: 100%;
+  min-height: 50px;
+  padding: 10px 25px;
+  background-color: white;
+  border-bottom: solid 1px grey;
+  box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
+}
+.campus-content-col {
+  width: 250px;
+}
+.campus-content-action {
+  display: flex;
+  background-color: #2c79d2;
+  color: white;
+  justify-content: center;
+  width: 80px;
+  padding: 5px 0;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+.campus-content-action:hover {
+  color: white;
+  background-color: rgb(80, 70, 189);
+  border: black 1px solid;
+}
+
+.campus-item-col {
+  display: block;
+  width: 50%;
+  height: 100%;
+  overflow-wrap: break-word;
+}
