--- a/src/Component/FormReview/FormReview.css
+++ b/src/Component/FormReview/FormReview.css
@@ -1,18 +1,14 @@
-.fsidebar-form {
+.review-form {
     display: flex;
     align-items: center;
     justify-content: center;
     max-width: 1200px;
     padding: 30px 0px;
   }
-  .fsidebar-content {
+  .review-content {
     width: 100%;
   }
-  .fsidebar-title {
-    max-width: 1200px;
-    width: 99%;
-  }
-  .fsidebar-title-header {
+  .review-title-header {
     display: flex;
     font-weight: 600;
     font-size: 18px;
@@ -23,35 +19,44 @@
     align-items: center;
     outline: none;
     width: 100%;
-    padding: 20px 30px;
+    height: 50px;
+    padding: 0 25px;
     background-color: white;
     box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
-    border-radius: 5px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.122);
   }
-  .fsidebar-title-header p {
+  .review-title-header p {
     font-style: normal;
     font-weight: 400;
+    margin-left: 10px;
   }
-  .fsidebar-icons {
+  .review-title-item {
+    line-height: 1.5;
+    display: flex;
+  }
+  .review-icons {
     display: flex;
     width: 80px;
     align-items: center;
     justify-content: space-between;
     font-size: 20px;
   }
-  .fsidebar-icon {
+  .review-icon {
     cursor: pointer;
+    /* padding-left: 10px; */
   }
-  .fsidebar-icons-down {
+  .review-icons-down {
+    /* min-height: 130px; */
+    margin-top: 30px;
+    font-size: 20px;
     height: 100%;
   }
-  .fsidebar-icon-down {
+  .review-icon-down {
     font-size: 25px;
     cursor: pointer;
   }
   /* Form */
-  .fsidebar-title-form {
+  .review-title-form {
     background-color: white;
     max-height: 0;
     overflow: hidden;
@@ -60,13 +65,13 @@
     border-bottom: 1px solid grey;
     transition: all 0.3s ease-in-out;
   }
-  .fsidebar-title-form.active {
+  .review-title-form.active {
     max-height: 300px;
     padding: 20px 50px;
     box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
     transition: all 0.3s ease-in-out;
   }
-  .fsidebar-item-title {
+  .review-item-title {
     display: flex;
     font-weight: 600;
     font-size: 18px;
@@ -82,14 +87,16 @@
     padding: 0 25px;
     background-color: white;
     box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
+    border-radius: 5px;
+    margin-bottom: 5px;
   }
-  .fsidebar-title {
+  .review-title {
     margin-bottom: 1px;
   }
-  .fsidebar-title-item {
+  .review-title-item {
     line-height: 1.5;
   }
-  .fsidebar-item-content {
+  .review-item-content {
     display: flex;
     font-weight: 600;
     font-size: 16px;
@@ -108,14 +115,14 @@
   }
   
   /* Items drop down*/
-  .fsidebar-items-wrap {
+  .review-items-wrap {
     background-color: white;
     max-height: 1000px;
-    padding-right: 20px;
-    padding-left: 60px;
+    padding-right: 10px;
+    padding-left: 50px;
     transition: all 0.3s ease-in-out;
   }
-  .fsidebar-item-header {
+  .review-item-header {
     display: flex;
     font-weight: 400;
     font-size: 16px;
@@ -127,16 +134,15 @@
     outline: none;
     width: 100%;
     min-height: 50px;
-    /* max-height: 50px; */
     padding: 10px 25px;
     background-color: white;
     border-bottom: solid 1px grey;
     box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
   }
-  .fsidebar-content-col {
+  .review-content-col {
     width: 250px;
   }
-  .fsidebar-content-action {
+  .review-content-action {
     display: flex;
     background-color: #2c79d2;
     color: white;
@@ -147,16 +153,27 @@
     border-radius: 5px;
     border: 1px solid black;
   }
-  .fsidebar-content-action:hover {
+  .review-content-action:hover {
     color: white;
     background-color: rgb(80, 70, 189);
     border: black 1px solid;
   }
   
-  .fsidebar-item-col {
+  .review-item-col{
     display: block;
-    width: 60%;
     height: 100%;
     overflow-wrap: break-word;
+  }
+  .col1{
+    width: 10%;
+  }
+  .col2{
+    width: 20%;
+  }
+  .col3{
+    width: 10%;
+  }
+  .col4{
+    width: 40%;
   }
   
