--- a/src/Component/FormSidebar/formSidebar.css
+++ b/src/Component/FormSidebar/formSidebar.css
@@ -1,162 +1,221 @@
 .fsidebar-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 1200px;
-    padding: 30px 0px;
-  }
-  .fsidebar-content {
-    width: 100%;
-  }
-  .fsidebar-title {
-    max-width: 1200px;
-    width: 99%;
-  }
-  .fsidebar-title-header {
-    display: flex;
-    font-weight: 600;
-    font-size: 18px;
-    color: #111111;
-    font-family: inherit;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    outline: none;
-    width: 100%;
-    padding: 20px 30px;
-    background-color: white;
-    box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
-    border-radius: 5px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.122);
-  }
-  .fsidebar-title-header p {
-    font-style: normal;
-    font-weight: 400;
-  }
-  .fsidebar-icons {
-    display: flex;
-    width: 80px;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-  }
-  .fsidebar-icon {
-    cursor: pointer;
-  }
-  .fsidebar-icons-down {
-    height: 100%;
-  }
-  .fsidebar-icon-down {
-    font-size: 25px;
-    cursor: pointer;
-  }
-  /* Form */
-  .fsidebar-title-form {
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    padding-left: 14px;
-    padding-right: 14px;
-    border-bottom: 1px solid grey;
-    transition: all 0.3s ease-in-out;
-  }
-  .fsidebar-title-form.active {
-    max-height: 300px;
-    padding: 20px 50px;
-    box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
-    transition: all 0.3s ease-in-out;
-  }
-  .fsidebar-item-title {
-    display: flex;
-    font-weight: 600;
-    font-size: 18px;
-    color: #111111;
-    font-family: inherit;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: solid 2px gray;
-    outline: none;
-    width: 100%;
-    height: 65px;
-    padding: 0 25px;
-    background-color: white;
-    box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
-  }
-  .fsidebar-title {
-    margin-bottom: 1px;
-  }
-  .fsidebar-title-item {
-    line-height: 1.5;
-  }
-  .fsidebar-item-content {
-    display: flex;
-    font-weight: 600;
-    font-size: 16px;
-    color: #111111;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 50px;
-    padding: 0 25px;
-    background-color: white;
-    box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
-    border-bottom: solid 1px grey;
-  }
-  
-  /* Items drop down*/
-  .fsidebar-items-wrap {
-    background-color: white;
-    max-height: 1000px;
-    padding-right: 20px;
-    padding-left: 60px;
-    transition: all 0.3s ease-in-out;
-  }
-  .fsidebar-item-header {
-    display: flex;
-    font-weight: 400;
-    font-size: 16px;
-    color: #111111;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: none;
-    outline: none;
-    width: 100%;
-    min-height: 50px;
-    /* max-height: 50px; */
-    padding: 10px 25px;
-    background-color: white;
-    border-bottom: solid 1px grey;
-    box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
-  }
-  .fsidebar-content-col {
-    width: 250px;
-  }
-  .fsidebar-content-action {
-    display: flex;
-    background-color: #2c79d2;
-    color: white;
-    justify-content: center;
-    width: 80px;
-    padding: 5px 0;
-    cursor: pointer;
-    border-radius: 5px;
-    border: 1px solid black;
-  }
-  .fsidebar-content-action:hover {
-    color: white;
-    background-color: rgb(80, 70, 189);
-    border: black 1px solid;
-  }
-  
-  .fsidebar-item-col {
-    display: block;
-    width: 60%;
-    height: 100%;
-    overflow-wrap: break-word;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 2;
+  max-width: 1200px;
+  padding: 30px 0px;
+}
+.fsidebar-content {
+  width: 100%;
+}
+.fsidebar-title {
+  width: 100%;
+}
+.fsidebar-title-header {
+  display: flex;
+  font-weight: 600;
+  font-size: 18px;
+  color: #111111;
+  font-family: inherit;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  outline: none;
+  width: 100%;
+  padding: 10px 30px;
+  background-color: white;
+  box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
+  border-radius: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.122);
+}
+.fsidebar-title-header p {
+  font-style: normal;
+  font-weight: 400;
+}
+
+.fsidebar-icons-down {
+  height: 100%;
+}
+.fsidebar-icon-down {
+  font-size: 20px;
+  cursor: pointer;
+}
+/* Form */
+.fsidebar-title-form {
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  padding-left: 14px;
+  padding-right: 14px;
+  border-bottom: 1px solid grey;
+  transition: all 0.3s ease-in-out;
+}
+.fsidebar-title-form.active {
+  max-height: 300px;
+  padding: 20px 50px;
+  box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
+  transition: all 0.3s ease-in-out;
+}
+.fsidebar-item-title {
+  display: flex;
+  font-weight: 600;
+  font-size: 18px;
+  color: #111111;
+  font-family: inherit;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: solid 2px gray;
+  outline: none;
+  width: 100%;
+  height: 65px;
+  padding: 0 25px;
+  background-color: white;
+  box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
+}
+.fsidebar-title {
+  margin-bottom: 1px;
+}
+.fsidebar-title-item {
+  line-height: 1.5;
+}
+.fsidebar-item-content {
+  display: flex;
+  font-weight: 600;
+  font-size: 16px;
+  color: #111111;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 50px;
+  padding: 0 25px;
+  background-color: white;
+  box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
+  border-bottom: solid 1px grey;
+}
+
+/* Items\ content*/
+.fsidebar-content-col {
+  width: 250px;
+}
+.fsidebar-content-action {
+  display: flex;
+  background-color: #2c79d2;
+  color: white;
+  justify-content: center;
+  width: 80px;
+  padding: 5px 0;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+.fsidebar-content-action:hover {
+  color: white;
+  background-color: rgb(80, 70, 189);
+  border: black 1px solid;
+}
+
+/* Items */
+.fsidebar-items-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.fsidebar-items-add {
+  width: 100px;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid grey;
+  border-radius: 5px;
+  font-size: 30px;
+  color: #2c79d2;
+  cursor: pointer;
+}
+
+.fsidebar-items-add:hover {
+  background-color: #8eb0d7;
+  color: white;
+}
+.fsidebar-items-wrap {
+  border: 1px solid gray;
+  min-width: 900px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px 10px;
+}
+.fsidebar-item-header {
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-size: 16px;
+  color: #111111;
+  align-items: center;
+  border: none;
+  outline: none;
+  padding: 10px 10px;
+  background-color: white;
+  border: #111111 solid 1px;
+  box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.fsidebar-item-header img {
+  height: 100px;
+  margin-bottom: 10px;
+  border: 1px solid grey;
+}
+.fsidebar-item-col {
+  height: 160px;
+  width: 112px;
+  margin-bottom: 10px;
+  border: 1px solid grey;
+}
+.fsidebar-icons {
+  display: flex;
+  width: 80px;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 20px;
+}
+.fsidebar-icon {
+  cursor: pointer;
+  font-size: 25px;
+}
+.fsidebar-icon.det {
+  color: rgb(195, 60, 60);
+}
+.fsidebar-icon:hover {
+  cursor: pointer;
+  color: green;
+}
+
+.fsidebar-map-container {
+  display: flex;
+  flex-direction: row;
+  padding: 30px 0px;
+}
+.fsidebar-map-header {
+  position: relative;
+}
+.fsidebar-map-header img {
+  height: 400px;
+  border: 1px solid grey;
+}
+.fsidebar-icons-map {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: rgb(214, 73, 73);
+  font-size: 30px;
+  cursor: pointer;
+}
+.fsidebar-icons-map:hover {
+  color: black;
+}
