--- a/src/Component/FormBanner/FormBanner.css
+++ b/src/Component/FormBanner/FormBanner.css
@@ -10,20 +10,30 @@
 .banner-title {
   margin-bottom: 5px;
 }
+.banner-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.banner-header .header-icon {
+  margin-left: 10px;
+  font-size: 25px;
+  cursor: pointer;
+}
+.banner-header .header-icon:hover {
+  color: rgb(57, 57, 216);
+}
+
 .banner-title-header {
   display: flex;
-  font-weight: 600;
+  flex-direction: column;
   font-size: 18px;
   color: #111111;
   font-family: inherit;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   border-bottom: solid 1px gray;
   outline: none;
   width: 100%;
-  height: 65px;
-  padding: 0 25px;
+  padding: 20px 25px;
   background-color: white;
   box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
 }
@@ -41,8 +51,39 @@
 /* Form */
 .banner-title-form {
   background-color: white;
-  max-height: 400px;
-  padding: 14px 40px;
+  max-height: 0px;
+  overflow: hidden;
   border-bottom: 1px solid grey;
   box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
+  transition: all 0.3s ease-in-out;
+}
+.banner-title-form.active {
+  padding: 20px;
+  max-height: 400px;
+  transition: all 0.3s ease-in-out;
+}
+
+.banner-img-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 30px 0px;
+}
+.banner-img-header {
+  position: relative;
+}
+.banner-img-header img {
+  height: 400px;
+  border: 2px solid black;
+}
+.banner-icons-img {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: rgb(233, 223, 223);
+  font-size: 30px;
+  cursor: pointer;
+}
+.banner-icons-img:hover {
+  color: black;
 }
