--- a/src/Component/FormReview/FormReview.css
+++ b/src/Component/FormReview/FormReview.css
@@ -165,10 +165,11 @@
     overflow-wrap: break-word;
   }
   .col1{
-    width: 10%;
+    width: 12%;
   }
   .col2{
-    width: 20%;
+    width: 15%;
+    text-align: center;
   }
   .col3{
     width: 10%;
@@ -176,4 +177,39 @@
   .col4{
     width: 40%;
   }
+  .rv-add-img{
+    margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  font-size: 25px;
+  border: #111111 1px solid;
+  border-radius: 5px;
+  cursor: pointer;
+  }
+  .rv-add-img:hover{
+    color: #2c79d2;
+  border-color: #2c79d2;
+  }
+  .rv-edit-img{
+  position: relative;
+ width: 100px;
+ height: 100px;
+ margin-top: 10px;
+  }
+.rv-icon-edit{
+  position: absolute;
+  top:5px;
+  right: 50%;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.rv-icon-edit:hover{
+  opacity: 1;
+}
+.rv-edit-img img{
+  width: 90%;
+}
   
