--- a/src/Component/FormCampus/FormCampus.css
+++ b/src/Component/FormCampus/FormCampus.css
@@ -164,4 +164,55 @@
   width: 50%;
   height: 100%;
   overflow-wrap: break-word;
+  /* text-align: center; */
 }
+.campus-item-col img{
+ /* width: 60%; */
+ height: 100px;
+ border-radius: 5px ;
+}
+.item-col1{
+  padding-left: 30px;
+  width: 39%;
+}
+.campus-edit-img{
+position: relative;
+ width: 100px;
+ height: 100px;
+ margin-top: 10px;
+}
+
+.campus-edit-img img{
+  height: 100%;
+}
+.campus-add-img{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  font-size: 25px;
+  border: #111111 1px solid;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.campus-icon-edit{
+  position: absolute;
+  top:5px;
+  right: 5px;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.campus-icon-edit:hover{
+  opacity: 1;
+}
+.cp-icon-add{
+ text-align: center;
+}
+.campus-add-img:hover{
+  color: #2c79d2;
+  border-color: #2c79d2;
+}
+/* .col2{
+  /* padding-left: 10px; */
