--- a/src/Component/FormReview/FormReview.css
+++ b/src/Component/FormReview/FormReview.css
@@ -1,184 +1,188 @@
 .review-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 1200px;
-    padding: 30px 0px;
-  }
-  .review-content {
-    width: 100%;
-  }
-  .review-title-header {
-    display: flex;
-    font-weight: 600;
-    font-size: 18px;
-    color: #111111;
-    font-family: inherit;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    outline: none;
-    width: 100%;
-    height: 50px;
-    padding: 0 25px;
-    background-color: white;
-    box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.122);
-  }
-  .review-title-header p {
-    font-style: normal;
-    font-weight: 400;
-    margin-left: 10px;
-  }
-  .review-title-item {
-    line-height: 1.5;
-    display: flex;
-  }
-  .review-icons {
-    display: flex;
-    width: 80px;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-  }
-  .review-icon {
-    cursor: pointer;
-    /* padding-left: 10px; */
-  }
-  .review-icons-down {
-    /* min-height: 130px; */
-    margin-top: 30px;
-    font-size: 20px;
-    height: 100%;
-  }
-  .review-icon-down {
-    font-size: 25px;
-    cursor: pointer;
-  }
-  /* Form */
-  .review-title-form {
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    padding-left: 14px;
-    padding-right: 14px;
-    border-bottom: 1px solid grey;
-    transition: all 0.3s ease-in-out;
-  }
-  .review-title-form.active {
-    max-height: 300px;
-    padding: 20px 50px;
-    box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
-    transition: all 0.3s ease-in-out;
-  }
-  .review-item-title {
-    display: flex;
-    font-weight: 600;
-    font-size: 18px;
-    color: #111111;
-    font-family: inherit;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: solid 2px gray;
-    outline: none;
-    width: 100%;
-    height: 65px;
-    padding: 0 25px;
-    background-color: white;
-    box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
-    border-radius: 5px;
-    margin-bottom: 5px;
-  }
-  .review-title {
-    margin-bottom: 1px;
-  }
-  .review-title-item {
-    line-height: 1.5;
-  }
-  .review-item-content {
-    display: flex;
-    font-weight: 600;
-    font-size: 16px;
-    color: #111111;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 50px;
-    padding: 0 25px;
-    background-color: white;
-    box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
-    border-bottom: solid 1px grey;
-  }
-  
-  /* Items drop down*/
-  .review-items-wrap {
-    background-color: white;
-    max-height: 1000px;
-    padding-right: 10px;
-    padding-left: 50px;
-    transition: all 0.3s ease-in-out;
-  }
-  .review-item-header {
-    display: flex;
-    font-weight: 400;
-    font-size: 16px;
-    color: #111111;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: none;
-    outline: none;
-    width: 100%;
-    min-height: 50px;
-    padding: 10px 25px;
-    background-color: white;
-    border-bottom: solid 1px grey;
-    box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
-  }
-  .review-content-col {
-    width: 250px;
-  }
-  .review-content-action {
-    display: flex;
-    background-color: #2c79d2;
-    color: white;
-    justify-content: center;
-    width: 80px;
-    padding: 5px 0;
-    cursor: pointer;
-    border-radius: 5px;
-    border: 1px solid black;
-  }
-  .review-content-action:hover {
-    color: white;
-    background-color: rgb(80, 70, 189);
-    border: black 1px solid;
-  }
-  
-  .review-item-col{
-    display: block;
-    height: 100%;
-    overflow-wrap: break-word;
-  }
-  .col1{
-    width: 12%;
-  }
-  .col2{
-    width: 15%;
-    text-align: center;
-  }
-  .col3{
-    width: 10%;
-  }
-  .col4{
-    width: 40%;
-  }
-  .rv-add-img{
-    margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 1200px;
+  padding: 30px 0px;
+}
+.review-content {
+  width: 100%;
+}
+.review-title-header {
+  display: flex;
+  font-weight: 600;
+  font-size: 18px;
+  color: #111111;
+  font-family: inherit;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  outline: none;
+  width: 100%;
+  height: 50px;
+  padding: 0 25px;
+  background-color: white;
+  box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.122);
+}
+.review-title-header p {
+  font-style: normal;
+  font-weight: 400;
+  margin-left: 10px;
+}
+.review-title-item {
+  line-height: 1.5;
+  display: flex;
+}
+.review-icons {
+  display: flex;
+  width: 80px;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 20px;
+}
+.review-icon {
+  cursor: pointer;
+  /* padding-left: 10px; */
+}
+.review-icons-down {
+  /* min-height: 130px; */
+  margin-top: 30px;
+  font-size: 20px;
+  height: 100%;
+}
+.review-icon-down {
+  font-size: 25px;
+  cursor: pointer;
+}
+/* Form */
+.review-title-form {
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  padding-left: 14px;
+  padding-right: 14px;
+  border-bottom: 1px solid grey;
+  transition: all 0.3s ease-in-out;
+}
+.review-title-form.active {
+  max-height: 300px;
+  padding: 20px 50px;
+  box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
+  transition: all 0.3s ease-in-out;
+}
+.review-item-title {
+  display: flex;
+  font-weight: 600;
+  font-size: 18px;
+  color: #111111;
+  font-family: inherit;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: solid 2px gray;
+  outline: none;
+  width: 100%;
+  height: 65px;
+  padding: 0 25px;
+  background-color: white;
+  box-shadow: 0 0 49px 0 rgb(0 0 0 / 8%);
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+.review-title {
+  margin-bottom: 1px;
+}
+.review-title-item {
+  line-height: 1.5;
+}
+.review-item-content {
+  display: flex;
+  font-weight: 600;
+  font-size: 16px;
+  color: #111111;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 50px;
+  padding: 0 25px;
+  background-color: white;
+  box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
+  border-bottom: solid 1px grey;
+}
+
+/* Items drop down*/
+.review-items-wrap {
+  background-color: white;
+  max-height: 1000px;
+  padding-right: 10px;
+  padding-left: 50px;
+  transition: all 0.3s ease-in-out;
+}
+.review-item-header {
+  display: flex;
+  font-weight: 400;
+  font-size: 16px;
+  color: #111111;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+  outline: none;
+  width: 100%;
+  min-height: 50px;
+  padding: 10px 25px;
+  background-color: white;
+  border-bottom: solid 1px grey;
+  box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
+}
+.review-content-col {
+  width: 250px;
+}
+.review-content-action {
+  display: flex;
+  background-color: #2c79d2;
+  color: white;
+  justify-content: center;
+  width: 80px;
+  padding: 5px 0;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+.review-content-action:hover {
+  color: white;
+  background-color: rgb(80, 70, 189);
+  border: black 1px solid;
+}
+
+.review-item-col {
+  display: block;
+  height: 100%;
+  overflow-wrap: break-word;
+}
+.col1 {
+  width: 12%;
+}
+.col2 {
+  width: 15%;
+  text-align: center;
+}
+.review-item-col.col2 img {
+  height: 70px;
+  width: 70px;
+}
+.col3 {
+  width: 10%;
+}
+.col4 {
+  width: 40%;
+}
+.rv-add-img {
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -188,28 +192,34 @@
   border: #111111 1px solid;
   border-radius: 5px;
   cursor: pointer;
-  }
-  .rv-add-img:hover{
-    color: #2c79d2;
+}
+.rv-add-img:hover {
+  color: #2c79d2;
   border-color: #2c79d2;
-  }
-  .rv-edit-img{
-  position: relative;
- width: 100px;
- height: 100px;
- margin-top: 10px;
-  }
-.rv-icon-edit{
-  position: absolute;
-  top:5px;
-  right: 50%;
-  opacity: 0.5;
+}
+.rv-edit-img {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  font-size: 30px;
+  border-radius: 5px;
+  color: rgb(52, 117, 207);
   cursor: pointer;
 }
-.rv-icon-edit:hover{
+.rv-edit-img .rv-icon-add {
+  opacity: 0.3;
+}
+
+.rv-edit-img:hover .rv-icon-add {
   opacity: 1;
 }
-.rv-edit-img img{
-  width: 90%;
+.rv-edit-img:hover {
+  opacity: 0.8;
 }
-  
+
+.review-box-modal textarea {
+  height: 120px;
+}
